@@ -83,6 +83,13 @@ COSYSTEM_HOSTNAME="127.0.0.1"
 # SERVER_HOSTNAME)
 DETACH_JOB_FROM_SERVER="0"
 
+# If DETACH_JOB_FROM_SERVER=1 then OAR is able to launch jobs with a sliding
+# window to avoid the overload of the server (default is 5).
+# (This reduce the number of "bipbip" processes seen at a time.)
+# If you want to disable this sliding window feature then just put the value 0
+# to this tag.
+#RUNNER_SLIDING_WINDOW_SIZE="5"
+
 # Command to use to connect to other nodes (default is "ssh" in the PATH)
 #OPENSSH_CMD="/usr/bin/ssh -p 6667"
 
